updatesd slides for week 2 lecture

--- a/week_2/solutions/practice_questions.ipynb
+++ b/week_2/solutions/practice_questions.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d7fcc9af-c135-4179-b0f8-2100f9468f17",
    "metadata": {},
    "outputs": [
@@ -306,6 +306,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "be\n",
+      "to\n",
+      "be\n",
+      "or\n",
+      "not\n",
+      "to\n",
       "{'to': 2, 'be': 2, 'or': 1, 'not': 1}\n"
      ]
     }
@@ -323,6 +329,14 @@
     "\n",
     "print(word_counts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32cc4e06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
