finished week 3 workbook

--- a/week_3/solutions/morse_comprehension.ipynb
+++ b/week_3/solutions/morse_comprehension.ipynb
@@ -2,44 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "nbval-ignore-output"
-    ]
-   },
-   "source": [
-    "We created the mew `morse` module (in the solutions directory) that contains the `encode` function and the `letter_to_morse` dictionary:\n",
-    "\n",
-    "```python\n",
-    "letter_to_morse = {\n",
-    "    'a':'.-', 'b':'-...', 'c':'-.-.', 'd':'-..', 'e':'.', 'f':'..-.', \n",
-    "    'g':'--.', 'h':'....', 'i':'..', 'j':'.---', 'k':'-.-', 'l':'.-..', 'm':'--', \n",
-    "    'n':'-.', 'o':'---', 'p':'.--.', 'q':'--.-', 'r':'.-.', 's':'...', 't':'-',\n",
-    "    'u':'..-', 'v':'...-', 'w':'.--', 'x':'-..-', 'y':'-.--', 'z':'--..',\n",
-    "    '0':'-----', '1':'.----', '2':'..---', '3':'...--', '4':'....-',\n",
-    "    '5':'.....', '6':'-....', '7':'--...', '8':'---..', '9':'----.', ' ':'/'\n",
-    "}\n",
-    "\n",
-    "\n",
-    "def encode(message):\n",
-    "    morse = []\n",
-    "\n",
-    "    for letter in message:\n",
-    "        letter = letter.lower()\n",
-    "        morse_letter = letter_to_morse[letter]\n",
-    "        morse.append(morse_letter)\n",
-    "\n",
-    "    morse_message = \" \".join(morse)\n",
-    "    \n",
-    "    return morse_message\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We import and use the new `morse` module like this:"
+    "We created the new module `morse_comprehension` (in the solutions directory) to better separate the solutions for the individual exercises. The list comprehensions look like this:"
    ]
   },
   {
@@ -50,6 +15,46 @@
      "nbval-ignore-output"
     ]
    },
+   "outputs": [],
+   "source": [
+    "letter_to_morse = {\n",
+    "    'a':'.-', 'b':'-...', 'c':'-.-.', 'd':'-..', 'e':'.', 'f':'..-.', \n",
+    "    'g':'--.', 'h':'....', 'i':'..', 'j':'.---', 'k':'-.-', 'l':'.-..', 'm':'--', \n",
+    "    'n':'-.', 'o':'---', 'p':'.--.', 'q':'--.-', 'r':'.-.', 's':'...', 't':'-',\n",
+    "    'u':'..-', 'v':'...-', 'w':'.--', 'x':'-..-', 'y':'-.--', 'z':'--..',\n",
+    "    '0':'-----', '1':'.----', '2':'..---', '3':'...--', '4':'....-',\n",
+    "    '5':'.....', '6':'-....', '7':'--...', '8':'---..', '9':'----.', ' ':'/'\n",
+    "}\n",
+    "\n",
+    "# We need to invert the dictionary. This will create a dictionary\n",
+    "# that can go from the morse back to the letter\n",
+    "morse_to_letter = {}\n",
+    "for letter in letter_to_morse:\n",
+    "    morse = letter_to_morse[letter]\n",
+    "    morse_to_letter[morse] = letter\n",
+    "\n",
+    "def encode(message):\n",
+    "    if \"!\" in message:\n",
+    "        raise ValueError(f\"'!' is not valid in English strings\")\n",
+    "\n",
+    "    morse = [letter_to_morse[letter] for letter in message.lower()]\n",
+    "\n",
+    "    morse_message = \" \".join(morse)\n",
+    "    \n",
+    "    return morse_message\n",
+    "    \n",
+    "def decode(message):\n",
+    "    english = [morse_to_letter[letter] for letter in message.split(\" \")]\n",
+    "\n",
+    "    english_message = \"\".join(english)\n",
+    "    \n",
+    "    return english_message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -61,11 +66,11 @@
     }
    ],
    "source": [
-    "import morse\n",
+    "import morse_comprehension\n",
     "\n",
     "message = \"SOS We have hit an iceberg and need help quickly\"\n",
     "\n",
-    "encoded_message = morse.encode(message)\n",
+    "encoded_message = morse_comprehension.encode(message)\n",
     "\n",
     "print(f\"Incoming message: {message}\")\n",
     "print(f\"   Morse encoded: {encoded_message}\")"
