--- a/week_3/solutions/morse_raise.ipynb
+++ b/week_3/solutions/morse_raise.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We created the new module `morse_exception` to better separate the solutions for the individual exercises."
+    "We created the new module `morse_exception` (in the solutions directory) to better separate the solutions for the individual exercises."
    ]
   },
   {
