--- a/week_3/week_03_workbook_code_structuring.ipynb
+++ b/week_3/week_03_workbook_code_structuring.ipynb
@@ -57,13 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "69cd80f3-69a1-459f-9339-b9480564422e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 * 6\n",
+      "5 + 6\n",
+      "457 - 75\n",
+      "54 / 3\n",
+      "4 + 6\n"
+     ]
+    }
+   ],
    "source": [
     "# start of the calculator exercise to practice basic Python concepts\n",
-    "# we will use this to solve the the exercise during the lecture\n",
+    "# we will use this to solve the exercise during the lecture together\n",
     "with open(\"assets/calc.txt\") as f:\n",
     "    for line in f:\n",
     "        print(line, end=\"\")"
