added slide structure for week 3 lecture

--- a/week_3/week_03_workbook_code_structuring.ipynb
+++ b/week_3/week_03_workbook_code_structuring.ipynb
@@ -9,8 +9,19 @@
     }
    },
    "source": [
-    "# Recap of Week 2: Python basics\n",
-    "In the last week we learned the basics of the Python programming language. In particular, we covered the following topics and concepts:\n"
+    "# Recap of Week 2: Python basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f32048f7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "In the last week we learned the basics of the Python programming language. In particular, we covered the following topics and concepts:"
    ]
   },
   {
@@ -34,16 +45,35 @@
   {
    "cell_type": "markdown",
    "id": "ce81db0c-d746-4059-801b-77f545c9ae09",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### Calculator challenge\n",
+    "### Calculator challenge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f7e443",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "The final exercise from last week's summary notebook uses a lot of these concepts to build a simple calculator which can read numerical operations from a file and print the answers to the screen. If you haven't done yet, it would be a good idea to try to work at least on the first part of the challange, which reads:"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "2301010b-4f5a-458f-a88a-fea29b4d41bc",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "Write a program which reads in that file and performs the mathematical operations listed. It should output something like:\n",
     "  ```\n",
@@ -57,9 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "69cd80f3-69a1-459f-9339-b9480564422e",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -84,7 +118,11 @@
   {
    "cell_type": "markdown",
    "id": "f34253b2-9e1c-46b0-ba1a-3195eb5ddc7b",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "You can find all the solutions for this challenge [here](solutions/calculator.ipynb)."
    ]
@@ -92,7 +130,11 @@
   {
    "cell_type": "markdown",
    "id": "76e240bc-160d-489c-8a12-bd680d09f8f0",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Week 3: Code Structuring"
    ]
@@ -114,7 +156,11 @@
   {
    "cell_type": "markdown",
    "id": "c157840d-6b8a-47b2-a432-19464acf23c5",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "You can jump ahead to any chapter with the navigation below:\n"
    ]
@@ -124,7 +170,7 @@
    "id": "a5203ca7-14fa-4e5d-b023-54d379b666f7",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -150,7 +196,7 @@
     }
    },
    "source": [
-    "## [[Next](./chapters/01-installing_python.ipynb)]"
+    "## [[Next](./chapters/01-string_formatting.ipynb)]"
    ]
   }
  ],
