added bristol rainfall exercise

--- a/week_4/week_04_numerical_python.ipynb
+++ b/week_4/week_04_numerical_python.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "## What is NumPy?\n",
     "\n",
-    "NumPy (short for Numerical Python and pronouced *num-pea* or *num-pie*) is a third-party Python module for numerical programming. Any time you have collections of numbers, either one-, two- or more dimensional, then NumPy is likely to help you out. It provides you with a large suite of tools, algorithms and techniques. It is one of the most commonly used Python packages around and is used in the majority of Python-based scientific software."
+    "[NumPy](https://numpy.org/doc/stable/user/absolute_beginners.html) (short for Numerical Python and pronouced *num-pea* or *num-pie*) is a third-party Python module for numerical programming. Any time you have collections of numbers, either one-, two- or more dimensional, then NumPy is likely to help you out. It provides you with a large suite of tools, algorithms and techniques. It is one of the most commonly used Python packages around and is used in the majority of Python-based scientific software."
    ]
   },
   {
@@ -90,96 +90,76 @@
    "source": [
     "Before we start actually introducing NumPy, let's use an easy example to demonstrate the main reason why NumPy is so popular and widely used in scientific computing: it is extremely fast! \n",
     "\n",
-    "Let's consider we want to add together all the integers from 1 to 1000000. We could do this with the tools we learned so far:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae31ecff-c15d-4f0d-884c-8d87525fce01",
-   "metadata": {},
-   "source": [
-    "### So far: data processing with lists\n",
-    "We can loop over a list of numbers and add each of them to a total count like this:"
+    "Let's consider we want to double all the values in a large list of 1 million values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "e5db4908-a425-4084-99a6-def14f458297",
+   "execution_count": 60,
+   "id": "4aa610bd-ee4e-42b9-a750-d05210ed223e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time in seconds: 0.07615804672241211\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# we load the time module here to measure the time our code needs to run\n",
-    "import time\n",
-    "start_time = time.time()\n",
+    "large_python_list = list(range(1_000_000))\n",
     "\n",
-    "total = 0\n",
-    "for num in range(1000001):\n",
-    "    total += num\n",
-    "\n",
-    "elapsed_time_list = time.time() - start_time\n",
-    "print(f\"time in seconds: {elapsed_time_list}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "806f40ba-b981-4079-a949-f2c4576ad980",
-   "metadata": {},
-   "source": [
-    "### New: the NumPy way\n",
-    "Let's do the same calculation with NumPy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "ce1ed7d8-6ddb-4672-b1bd-72ca6f522f48",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time in seconds: 0.0029807090759277344\n"
-     ]
-    }
-   ],
-   "source": [
     "import numpy as np\n",
-    "\n",
-    "start_time = time.time()\n",
-    "\n",
-    "numpy_total = np.sum(np.arange(1000001))\n",
-    "\n",
-    "elapsed_time_numpy = time.time() - start_time\n",
-    "\n",
-    "print(f\"time in seconds: {elapsed_time_numpy}\")"
+    "large_numpy_array = np.arange(1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff4c9296-80bd-4286-96da-8cac1d7c742d",
+   "metadata": {},
+   "source": [
+    "Doing this with plain Python could be done with a list comprehension (Note: `%%timeit` is an [IPython magic command](https://ipython.readthedocs.io/en/stable/interactive/magics.html#magic-timeit) to measure the time it takes to execute a line or a cell of code):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "a6c6a5cc-58a4-4bbb-95a3-cdc73bcd3e31",
+   "execution_count": 61,
+   "id": "97c7adbd-906c-43f8-8956-f3d6f6a45b6f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NumPy speed-up: 26.032074868021116\n"
+      "33.7 ms ± 343 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "print(f\"NumPy speed-up: {elapsed_time_list / elapsed_time_numpy}\")"
+    "%%timeit\n",
+    "\n",
+    "[i*2 for i in large_python_list]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7882c76-244f-4cd2-9886-31b1f93b9bce",
+   "metadata": {},
+   "source": [
+    "But NumPy allows us to do:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8f35b2a8-d97d-4b4d-a161-3abce1c0ac6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "524 µs ± 89.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "large_numpy_array * 2"
    ]
   },
   {
@@ -191,7 +171,7 @@
     }
    },
    "source": [
-    "We see that NumPy can be an order of magnitude faster in processing large collections of data than anything we could do before (we will see why this is later on). Obviously, the amounts of data you will deal with when running environmental models or analysing geographical data sets in the future can get very big, very fast. So today, let's learn more about NumPy and how we can use it to unlock completely new ways of working with large, multi-dimensional datasets.\n",
+    "You might see different results on your computer but speedups of anything from 10 to 100 times is common on an example like this. There are plenty of operations which might see speedups of 1000 times or more. Obviously, the amounts of data you will deal with when running environmental models or analysing geographical data sets in the future can get very big, very fast. So today, let's learn more about NumPy and how we can use it to unlock completely new ways of working with large, multi-dimensional datasets.\n",
     "\n",
     "You can jump ahead to any chapter with the navigation below:\n"
    ]
@@ -207,7 +187,13 @@
    "source": [
     "## Table of Contents\n",
     "\n",
-    "1. #### [String formatting](./chapters/01-string_formatting.ipynb)\n"
+    "1. #### [NumPy arrays](./chapters/01-numpy_arrays.ipynb)\n",
+    "2. #### [Operations on NumPy arrays](./chapters/02-operations.ipynb)\n",
+    "3. #### [Multi-dimensional arrays](./chapters/03-multi-dimensional_arrays.ipynb)\n",
+    "4. #### [Filtering data](./chapters/04-filtering_arrays.ipynb)\n",
+    "5. #### [Combining arrays](./chapters/05-combining_arrays.ipynb)\n",
+    "6. #### [Final exercise](./chapters/06-final_exercise.ipynb)\n",
+    "7. #### [Summary](./chapters/07-summary.ipynb)\n"
    ]
   },
   {
@@ -219,7 +205,7 @@
     }
    },
    "source": [
-    "## [[Next](./chapters/01-string_formatting.ipynb)]"
+    "## [[Next](./chapters/01-numpy_arrays.ipynb)]"
    ]
   }
  ],
