added homework exercise

--- a/week_4/week_04_numerical_python.ipynb
+++ b/week_4/week_04_numerical_python.ipynb
@@ -193,7 +193,8 @@
     "4. #### [Filtering data](./chapters/04-filtering_data.ipynb)\n",
     "5. #### [Combining arrays](./chapters/05-combining_arrays.ipynb)\n",
     "6. #### [Final exercise](./chapters/06-final_exercise.ipynb)\n",
-    "7. #### [Summary](./chapters/07-summary.ipynb)\n"
+    "7. #### [Summary](./chapters/07-summary.ipynb)\n",
+    "8. #### [Homework](./chapters/08-homework.ipynb)\n"
    ]
   },
   {
