--- a/week_4/solutions/filtering_weather.ipynb
+++ b/week_4/solutions/filtering_weather.ipynb
@@ -207,17 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "eefd5a9f-863b-4b36-8adf-072ec93e929d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x11b52bb50>"
+       "<matplotlib.contour.QuadContourSet at 0x116930d00>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
