--- a/week_4/solutions/final_weather.ipynb
+++ b/week_4/solutions/final_weather.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "61bb0fed-470a-44c6-be08-3e54146e8806",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "039da164-a01c-4736-81e3-e46177496534",
    "metadata": {},
    "outputs": [],
@@ -81,17 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "c85254a9-7392-4a64-bb9d-7d15aadcbf7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x1277329a0>"
+       "<matplotlib.colorbar.Colorbar at 0x118154430>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -129,17 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "2a3c01c5-f0a8-435f-b60d-218f0bc45f1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x17bb12400>"
+       "<matplotlib.contour.QuadContourSet at 0x1184783a0>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "3a3f9bae-bd0f-41eb-9e31-c7c3489f48fe",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "7.769209185916657"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "6f554a7a-3265-440c-9723-1f28397b2ac7",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "5.417014417219415"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "2763d5f8-28bb-4359-9d17-01a71d052131",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "107.43320237681307"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "11d2c850-acf2-4baa-98a0-df04e455e6e6",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "-98.73265608426473"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
