--- a/week_4/week_04_numerical_python.ipynb
+++ b/week_4/week_04_numerical_python.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "4aa610bd-ee4e-42b9-a750-d05210ed223e",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "97c7adbd-906c-43f8-8956-f3d6f6a45b6f",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33.7 ms ± 343 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "36.7 ms ± 1.29 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "id": "8f35b2a8-d97d-4b4d-a161-3abce1c0ac6c",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "524 µs ± 89.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "362 µs ± 15 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
