added lecture slides

--- a/week_4/week_04_numerical_python.ipynb
+++ b/week_4/week_04_numerical_python.ipynb
@@ -17,7 +17,7 @@
    "id": "f32048f7",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -40,7 +40,11 @@
   {
    "cell_type": "markdown",
    "id": "fe4a11d6-fd3b-48fd-96c1-399c21f2f58c",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "We covered a wide range of the core concepts of the Python programming language, including data types, slicing, loops, branching, functions, modules and errors, in the last two weeks. Now, we can finally apply all of this to start processing scientific data. We will still learn about new ideas and tools along the way, but you will see that nearly all of these concepts - and the syntax to apply them - will be based upon the fundamental building blocks we learned about over the last two weeks."
    ]
@@ -60,7 +64,11 @@
   {
    "cell_type": "markdown",
    "id": "09afa9b2-cba2-43f6-ad65-7b834319a5b7",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "This week we will learn how to easily and efficiently work with large collections of numerical data. This could be a timeseries of observations, output from your environmental model or a distributed collection of multi-layer satellite data. The premier tool to work with any of these datasets is called NumPy."
    ]
@@ -68,17 +76,27 @@
   {
    "cell_type": "markdown",
    "id": "a1c5f95b-b9d8-4575-9a5f-a059f316fd97",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## What is NumPy?\n",
     "\n",
-    "[NumPy](https://numpy.org/doc/stable/user/absolute_beginners.html) (short for Numerical Python and pronouced *num-pea* or *num-pie*) is a third-party Python module for numerical programming. Any time you have collections of numbers, either one-, two- or more dimensional, then NumPy is likely to help you out. It provides you with a large suite of tools, algorithms and techniques. It is one of the most commonly used Python packages around and is used in the majority of Python-based scientific software."
+    "[NumPy](https://numpy.org/doc/stable/user/absolute_beginners.html) (short for Numerical Python and pronouced *num-pea* or *num-pie*) is a third-party Python module for numerical programming. Any time you have collections of numbers, either one-, two- or more dimensional, then NumPy is likely to help you out. It provides you with a large suite of tools, algorithms and techniques.\n",
+    "\n",
+    "It is one of the most commonly used Python packages around and is used in the majority of Python-based scientific software."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "22fc48fb-1652-4c05-88a0-615435c453cf",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Motivation: the speed of NumPy"
    ]
@@ -86,18 +104,36 @@
   {
    "cell_type": "markdown",
    "id": "63761458-ef4b-4765-a591-9cc2495ed356",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
-    "Before we start actually introducing NumPy, let's use an easy example to demonstrate the main reason why NumPy is so popular and widely used in scientific computing: it is extremely fast! \n",
-    "\n",
+    "Before we start actually introducing NumPy, let's use an easy example to demonstrate the main reason why NumPy is so popular and widely used in scientific computing: it is extremely fast! \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c16c653",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Let's consider we want to double all the values in a large list of 1 million values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4aa610bd-ee4e-42b9-a750-d05210ed223e",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "large_python_list = list(range(1_000_000))\n",
@@ -109,25 +145,25 @@
   {
    "cell_type": "markdown",
    "id": "ff4c9296-80bd-4286-96da-8cac1d7c742d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "Doing this with plain Python could be done with a list comprehension (Note: `%%timeit` is an [IPython magic command](https://ipython.readthedocs.io/en/stable/interactive/magics.html#magic-timeit) to measure the time it takes to execute a line or a cell of code):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "97c7adbd-906c-43f8-8956-f3d6f6a45b6f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36.7 ms ± 1.29 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "\n",
@@ -137,25 +173,25 @@
   {
    "cell_type": "markdown",
    "id": "b7882c76-244f-4cd2-9886-31b1f93b9bce",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "But NumPy allows us to do:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8f35b2a8-d97d-4b4d-a161-3abce1c0ac6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "362 µs ± 15 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
-     ]
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%%timeit\n",
     "\n",
@@ -181,7 +217,7 @@
    "id": "a5203ca7-14fa-4e5d-b023-54d379b666f7",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
