added xarray exercise

--- a/week_5/week_05_geospatial_data.ipynb
+++ b/week_5/week_05_geospatial_data.ipynb
@@ -64,8 +64,8 @@
     "\n",
     "1. #### [Review of 'Estimating $\\pi$' homework exercise](./chapters/01-darts_homework.ipynb)\n",
     "2. #### [Conda environments](./chapters/02-conda.ipynb)\n",
-    "3. #### [Geographical vector and raster data](./chapters/03-vectors_and_rasters.ipynb)\n",
-    "4. #### [Xarray](./chapters/04-xarray.ipynb)\n"
+    "3. #### [Vector data in geopandas](./chapters/03-vectors.ipynb)\n",
+    "4. #### [Raster data in xarray](./chapters/04-rasters.ipynb)\n"
    ]
   },
   {
