added xarray exercise solutions

--- a/week_5/week_05_geospatial_data.ipynb
+++ b/week_5/week_05_geospatial_data.ipynb
@@ -65,7 +65,9 @@
     "1. #### [Review of 'Estimating $\\pi$' homework exercise](./chapters/01-darts_homework.ipynb)\n",
     "2. #### [Conda environments](./chapters/02-conda.ipynb)\n",
     "3. #### [Vector data in geopandas](./chapters/03-vectors.ipynb)\n",
-    "4. #### [Raster data in xarray](./chapters/04-rasters.ipynb)\n"
+    "4. #### [Raster data in xarray](./chapters/04-rasters.ipynb)\n",
+    "5. #### [Xarray exercise](./chapters/05-xarray_exercise.ipynb)\n",
+    "6. #### [Cartopy maps](./chapters/06-cartopy.ipynb)"
    ]
   },
   {
