added NumPy recap

--- a/week_6/week_06_recap_and_assessment_1.ipynb
+++ b/week_6/week_06_recap_and_assessment_1.ipynb
@@ -9,7 +9,8 @@
     }
    },
    "source": [
-    "# Week 6: Unit review and intro to assessment 1"
+    "# Week 6: Unit review and intro to assessment 1\n",
+    "Rather than introducing more new content, we will take some time today to consolidate the concepts we discussed so far in the first half of the unit. Particular focus will be on working through the solutions to the xarray homework exercise from last week. We will finally introduce the formalities and motiviation around the first assessment, where you will apply these basic Python programming and data analysis concepts to quantify recent heat records in the UK and worldwide."
    ]
   },
   {
@@ -26,7 +27,7 @@
     "1. #### [Basic Python](./chapters/01-basic_python.ipynb)\n",
     "2. #### [NumPy](./chapters/02-numpy.ipynb)\n",
     "3. #### [Geospatial data](./chapters/03-geospatial_data.ipynb)\n",
-    "4. #### [xarray exercise](./chapters/04-xarray_exercise.ipynb)\n",
+    "4. #### [Xarray exercise](./chapters/04-xarray_exercise.ipynb)\n",
     "5. #### [Introduction to assessment 1](./chapters/05-intro_assessment.ipynb)"
    ]
   },
@@ -39,7 +40,7 @@
     }
    },
    "source": [
-    "## [[Next](./chapters/01-darts_homework.ipynb)]"
+    "## [[Next: Basic Python](./chapters/01-basic_python.ipynb)]"
    ]
   }
  ],
