added cartopy page

--- a/week_6/week_06_recap_and_assessment_1.ipynb
+++ b/week_6/week_06_recap_and_assessment_1.ipynb
@@ -28,7 +28,8 @@
     "2. #### [NumPy](./chapters/02-numpy.ipynb)\n",
     "3. #### [Geospatial data](./chapters/03-geospatial_data.ipynb)\n",
     "4. #### [Xarray exercise](./chapters/04-xarray_exercise.ipynb)\n",
-    "5. #### [Introduction to assessment 1](./chapters/05-intro_assessment.ipynb)"
+    "5. #### [Cartopy maps](./chapters/05-cartopy.ipynb)\n",
+    "6. #### [Introduction to assessment 1](./chapters/06-intro_assessment.ipynb)"
    ]
   },
   {
